# egui-screenshot-testing

./: CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  third-party-licenses.html
.github/workflows/: rust.yml
examples/: hello_world.rs
src/: egui_skia.rs  lib.rs  painter.rs  tests.rs
src/egui_skia/: mod.rs  painter.rs
