[package]
name = "egui-screenshot-testing"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "Helper functions to test egui applications using screenshots and comparing them to a snapshot version."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/thomaskrause/egui-screenshot-testing"

[features]
default = ["cpu_fix"]
cpu_fix = []

[dependencies]
egui = ">=0.27.1"
image = "0.24.9"
skia-safe = "0.72.0"
visual-hash = "3"

[dev-dependencies]
eframe = ">=0.27.1"
temp-env = "0.3.6"
tempfile = "3.10.1"
