[package]
name = "egui-screenshot-testing"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "Helper functions to test egui applications using screenshots and comparing them to a snapshot version."
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/thomaskrause/egui-screenshot-testing"

[features]
default = ["cpu_fix"]
cpu_fix = []

[dependencies]
egui = {version = ">=0.26.0", default-features=false}
image = "0.24.9"
skia-safe = "0.72.0"
visual-hash = "3"

[dev-dependencies]
eframe = ">=0.27.1"
temp-env = "0.3.6"
tempfile = "3.10.1"

[[example]]
name = "hello_world"
doc-scrape-examples = true
